--- a/src/client/app.css
+++ b/src/client/app.css
@@ -13,6 +13,7 @@ p {
 
 .card{
   width: 370px;
+  height:450px;
   height: auto;
   /* max-width: 100%;
   max-height: 100%; */
@@ -26,4 +27,5 @@ p {
 
 .col{
   /* text-align: center; */
+  /* hello */
 }
